# ilgregario

./: .dockerignore  .gitignore  0013-points-showcase.md  AGENTS.md  Dockerfile  LICENSE  README.md  auth.py  config.py  database.py  db_queries.py  fly.toml  main.py  package-lock.json  pyproject.toml  scoring.py  templates_env.py  utils.py
importers/: __init__.py  base.py  csv_file.py  json_file.py  pcs.py
plans/: 2026-04-27-0001-plan.md  2026-04-27-0002-deploy.md  2026-04-27-0003-seed-races-admin-scaffold.md  2026-04-27-0004-license-and-readme.md  2026-04-27-0005-refactor-sync-races-importers.md  2026-04-27-0006-sync-and-dashboard.md  2026-04-27-0007-admin-crud-scaffold.md  2026-04-28-0008-firstcycling-athlete-import.md  2026-04-28-0008-firstcycling-importer.md  2026-04-28-0009-user-athlete-assignments.md  2026-04-28-0010-athlete-unique-per-season.md  2026-04-28-0011-user-points-dashboard.md  2026-04-28-0012-fixes.md  2026-04-28-0013-points-showcase.md  2026-04-28-0014-real-db-dashboard.md  2026-04-28-0015-remove-fake-data.md  2026-04-29-0016-users-list.md  2026-04-29-0017-sync-upcoming-races.md  2026-04-29-0018-full-season-data.md  2026-04-29-0019-full-csv-calendar-import.md  2026-04-29-0020-import-all-athletes.md  2026-04-29-0021-athlete-profile-pages.md  2026-04-29-0022-add-difficulty-prestige.md  2026-04-29-0023-race-detail-page.md  2026-04-29-0024-dashboard-ui-polish.md  2026-04-29-0025-ux-improvements.md  2026-04-29-0026-athlete-slug-routing.md  2026-04-29-0027-athlete-photos-everywhere.md  2026-04-30-0028-fix-codebase-quality.md  (+3 more)
queries/: AGENTS.md  context.py  (+3 more)
(+52 files in other folders)
