[project]
name = "ilgregario"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "itsdangerous",
    "bcrypt",
    "supabase",
    "httpx",
    "openai",
    "python-dotenv",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
]
